# QT-snake

./: .gitignore  CMakeLists.txt
src/: Database.cpp  Database.hpp  MainWindow.cpp  MainWindow.hpp  Player.hpp  RenderArea.cpp  RenderArea.hpp  Snake.cpp  Snake.hpp  main.cpp
